LOOKS: Fix word-break in commetns box

--- a/src/app/tasks/task-comments-viewer/task-comments-viewer.scss
+++ b/src/app/tasks/task-comments-viewer/task-comments-viewer.scss
@@ -156,7 +156,7 @@ task-comments-viewer .markdown-editor .markdown-editor-inner-context {
 }
 task-comments-viewer .comment-submitter {
   display: flex;
-  word-break: break-all;
+  word-wrap: break-word;
   hyphens: auto;
   .markdown-editor {
     padding: 0;
